--- a/food-front/package.json
+++ b/food-front/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.1",
+    "node-sass": "^7.0.3",
+    "node-scss": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
