--- a/food-front/package.json
+++ b/food-front/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.0",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
